# win

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  valgrind-suppressions
driver/: .gitignore  CMakeLists.txt  Driver.cpp  Makefile  SoundDriver.cpp  atlas.txt  atlas1.adesc  atlas1.txt  driver.cpp  fragment.frag  main.tga  recipe  roll.assets  rollfile  sounddriver.cpp  vertex.vert  winbuild.bat
driver/assets/: artillery.tga  beacon.tga  beacon_1.tga  grass1.tga  mine.tga  skull.tga  tank.tga
tests/: ActiveSoundStoreTests.cpp  BagTests.cpp  BlockMapTests.cpp  CMakeLists.txt  ConcurrentRingBufferTests.cpp  GLMappedRingBufferTests.cpp  HeapTests.cpp  MappedBufferTests.cpp  MappedRingBufferTests.cpp  PoolTests.cpp  RingBufferTests.cpp  SoundIntegrationTests.cpp  SpatialIndexTests.cpp  activesoundstoretests.cpp  pooltests.cpp  ringbuffertests.cpp  soundintegration_tests.cpp
tests/assets/: sit.recipe  sit.roll
tools/: CMakeLists.txt  Makefile  roll.cpp  winbuild.bat
tools/atlas/: Atlas.cpp  Atlas.h  Targa.cpp  Targa.h  Texture.h  main.cpp
tools/atlasizer/: .gitignore  AtlasCompiler.cpp  AtlasCompiler.hpp  Atlasizer.cpp  Atlasizer.hpp  ControlPanel.cpp  ControlPanel.hpp  DialogManager.hpp  FilePickerManager.cpp  FilePickerManager.hpp  LayoutExporter.cpp  LayoutExporter.hpp  LinuxPlatform.cpp  LinuxPlatform.hpp  ListPanel.cpp  ListPanel.hpp  Platform.hpp  Renderer.cpp  Renderer.hpp  WindowsPlatform.cpp  WindowsPlatform.hpp  ZenityDialogManager.cpp  ZenityDialogManager.hpp  atlasizer.hpp  compileatlas.cpp  fragment_shader.frag  gui.cpp  gui2.cpp  layoutexporter.cpp  layoutexporter.hpp  main.cpp  recipe  targa.cpp  targa.hpp  vertex_shader.vert
tools/roll/: roll.cpp  roll.hpp
tools/roll/features/: Shadower.cpp  Shadower.hpp
tools/roll/recipe/: atlassectionprocessor.cpp  atlassectionprocessor.hpp  recipe.cpp  recipe.hpp  recipeparser.cpp  recipeparser.hpp  rollfile.cpp  rollfile.hpp  rollfileparser.cpp  rollfileparser.hpp  rollfilesectionprocessor.cpp  rollfilesectionprocessor.hpp  svgtotgasectionprocessor.cpp  svgtotgasectionprocessor.hpp
tools/roll/recipe/tests/: parsertests.cpp  test.hpp
win/: CMakeLists.txt  apack.cpp  apack.h  audio.h  audio_engine.cpp  audio_engine.h  display.cpp  display.h  event.h  font.cpp  font.h  joystick.cpp  joystick.h  resource.cpp  resource.h  roll.cpp  roll.h  system.h  utility.cpp  utility.h  win.h
win/CMakeModules/: FindDSound.cmake
win/include/: win.h
win/include/win/: AssetRoll.hpp  AssetRollStreamCompressed.hpp  AssetRollStreamRaw.hpp  Atlas.hpp  Bag.hpp  BlockMap.hpp  ConcurrentRingBuffer.hpp  Display.hpp  DisplayBase.hpp  Event.hpp  FileReadStream.hpp  FileStream.hpp  Font.hpp  FontRenderer.hpp  Heap.hpp  MappedBuffer.hpp  MappedRingBuffer.hpp  Math.hpp  MemoryStream.hpp  MonitorEnumerator.hpp  ObjectExchanger.hpp  Pool.hpp  RingBuffer.hpp  SimStateExchanger.hpp  SpatialIndex.hpp  Stream.hpp  Targa.hpp  TextRenderer.hpp  UdpClient.hpp  UdpServer.hpp  Utility.hpp  Win.hpp  Win32Display.hpp  Win32MonitorEnumerator.hpp  WsaSingleton.hpp  X11Display.hpp  X11MonitorEnumerator.hpp  activesoundstore.hpp  assetroll.hpp  assetrollstreamcompressed.hpp  (+34 more)
win/include/win/gl/: GL.hpp  GLAtlas.hpp  GLFont.hpp  GLMappedRingBuffer.hpp  GLTextRenderer.hpp
win/include/win/sound/: ActiveSoundStore.hpp  CachedPcmSource.hpp  CachingPcmSource.hpp  DecodingPcmSource.hpp  FloatPcmProvider.hpp  PcmDecoder.hpp  PcmResource.hpp  PcmSource.hpp  PcmStream.hpp  PitchScaleEffect.hpp  Sound.hpp  SoundCache.hpp  SoundEffect.hpp  SoundEngine.hpp  SoundEngineLinuxDummy.hpp  SoundEngineLinuxPipeWire.hpp  SoundEngineLinuxPulseAudio.hpp  SoundEngineWindowsDirectSound.hpp  SoundMixer.hpp  SoundRepo.hpp  activesoundstore.hpp  effectcontainer.hpp  floatpcmprovider.hpp  pcmdecoder.hpp  pcmresource.hpp  pcmstream.hpp  pitchscaleeffect.hpp  sound.hpp  soundcache.hpp  soundeffect.hpp  soundengine.hpp  soundengine_linux.hpp  soundengine_linux_dummy.hpp  soundengine_linux_pipewire.hpp  soundengine_linux_pipewire_functions.hpp  soundengine_linux_pulseaudio.hpp  soundengine_linux_pulseaudio_functions.hpp  soundengine_windows_directsound.hpp  soundmixer.hpp
win/include/win/sound/test/: SoundIntegrationTests.hpp  soundintegrationtests.hpp
win/include/win/test/: soundintegrationtests.hpp
win/lib/: freetype.lib  vorbis.lib  zlib.lib
win/libs/: ogg.lib
win/src/: AssetRoll.cpp  AssetRoll.h  AssetRollStreamCompressed.cpp  AssetRollStreamRaw.cpp  Atlas.cpp  Atlas.h  AudioEngine.cpp  AudioEngine.h  Display.cpp  Display.h  DisplayBase.cpp  DisplayLinux.cpp  DisplayWindows.cpp  FileReadStream.cpp  FileStream.cpp  Font.cpp  Font.h  FontRenderer.cpp  GL.cpp  MemoryStream.cpp  MonitorEnumerator.cpp  Sound.cpp  Sound.h  SoundBank.cpp  SoundBank.h  SoundEngine.cpp  SoundEngine.h  Stream.cpp  Targa.cpp  Targa.h  TextRenderer.cpp  Texture.cpp  Texture.h  UdpClient.cpp  UdpServer.cpp  Utility.cpp  Utility.h  Win32Display.cpp  Win32MonitorEnumerator.cpp  WsaSingleton.cpp  (+60 more)
win/src/gl/: GL.cpp  GLAtlas.cpp  GLFont.cpp  GLTextRenderer.cpp
win/src/sound/: CachedPcmSource.cpp  CachingPcmSource.cpp  DecodingPcmSource.cpp  PcmDecoder.cpp  PcmResource.cpp  PcmStream.cpp  PitchScaleEffect.cpp  SoundCache.cpp  SoundEngine.cpp  SoundEngineLinuxPipeWire.cpp  SoundEngineLinuxPulseAudio.cpp  SoundEngineWindowsDirectSound.cpp  SoundMixer.cpp  SoundRepo.cpp  pcmdecoder.cpp  pcmresource.cpp  pcmstream.cpp  pitchscaleeffect.cpp  soundcache.cpp  soundengine.cpp  soundengine_linux.cpp  soundengine_linux_pipewire.cpp  soundengine_linux_pipewire_functions.cpp  soundengine_linux_pulseaudio.cpp  soundengine_linux_pulseaudio_functions.cpp  soundengine_windows.cpp  soundengine_windows_directsound.cpp  soundmixer.cpp
